Completed Registration and login with hashed password

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -36,7 +36,7 @@
 
                         {% for package in packages  %}
                             <div class="project">
-                                <div class="title"><a href="/project/{{ package.id }}">{{ package.id }}</a></div>
+                                <div class="title"><a href="/projects/{{ package.id }}">{{ package.id }}</a></div>
                                 <div class="desc">{{ package.summary }}</div>
                             </div>
                         {% endfor %}
